--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "properties-reader": "0.0.16",
+    "querystring": "^0.2.0",
     "request": "^2.81.0"
   },
   "keywords": [
